welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
	var vuBiscuit:Boolean = false;
	if (vuBiscuit==true) {
		return true;
	} else {
	while (vuBiscuit=true) {
	for (x <- 0 to 6) {
		for (x <- 0 to 6) {
			avance()
			if (estSurBiscuit) {
				vuBiscuit==true;
			}
		}
		if (vuBiscuit==true) { 
			return true;
		}
		droite()
		avance()
		gauche()
	}
	
}
}
}
